--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # server/.env
 DB_HOST=localhost
-DB_USER=my_app_user
-DB_PASSWORD=my_app_password
-DB_DATABASE=adhd_focus_flow
-JWT_SECRET=a-very-secret-key-that-you-should-change-for-production
+DB_USER=u176488831_arrs_admin
+DB_PASSWORD=76Zpt4cVCR4h$$
+DB_DATABASE=u176488831_adhd_focus_flo
+JWT_SECRET=a-ve ry-secret-key-that-you-should-change-for-production
