updated env with db_host

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # server/.env
-DB_HOST=localhost
+DB_HOST=tech-next.eu
 DB_USER=u176488831_arrs_admin
 DB_PASSWORD=76Zpt4cVCR4h$$
 DB_DATABASE=u176488831_adhd_focus_flo
