updated database info and switch to php

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 # server/.env
-DB_HOST=tech-next.eu
+DB_HOST=srv1904.hstgr.io
 DB_USER=u176488831_arrs_admin
 DB_PASSWORD=76Zpt4cVCR4h$$
 DB_DATABASE=u176488831_adhd_focus_flo
-JWT_SECRET=a-ve ry-secret-key-that-you-should-change-for-production
+# /your-react-project-folder/.env
+REACT_APP_API_URL=https://tech-next.eu/api
