--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,4 @@ DB_USER=u176488831_arrs_admin
 DB_PASSWORD=76Zpt4cVCR4h$$
 DB_DATABASE=u176488831_adhd_focus_flo
 # /your-react-project-folder/.env
-REACT_APP_API_URL=https://tech-next.eu/api
+REACT_APP_API_URL=https://tech-next.eu/adhd_focus/api
