--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "/adhd_focus/",
+  "homepage": "https://tech-next.eu/adhd_focus",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
